scrollbar issue resolved

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
 }
 *::-webkit-scrollbar {
     width: 5px;
+    height: 0.4em;
 }
 *::-webkit-scrollbar-track {
   background: black;
